@@ -2,6 +2,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [API Changes]
+    - `fmap_void`, `fmap_concat` and `fmap_scalar` are imported from Future::Utils into classes by default
 
 0.005     2021-04-30 12:52:41+00:00 UTC
     [Bugs fixed]
